@@ -1,5 +1,5 @@
 Package: mi
-Version: 0.08-04.04
+Version: 0.08-04.05
 Date: 2009-12-1
 Title: Missing Data Imputation and Model Checking
 Author:
