@@ -55,18 +55,18 @@ mi.binary <- function( formula, data = NULL, start = NULL, n.iter = 100,
   bglm.imp <- bayesglm(formula = formula, data = data, family = binomial(link = "logit"), 
       n.iter = n.iter, start = start, drop.unused.levels = FALSE, 
       Warning = FALSE, ...)
-   determ.pred <- predict(bglm.imp, newdata = data, type = "response")
+   determ.pred <- predict(bglm.imp, newdata = data[mis,], type = "response")
 
   if(n.mis>0){
     if (draw.from.beta) {
       ####get right design matrix#
         tt <- terms(bglm.imp)
         Terms <- delete.response(tt)
-        mf <- model.frame(Terms, data=data,  xlev = bglm.imp$xlevels)
+        mf <- model.frame(Terms, data=data[mis,],  xlev = bglm.imp$xlevels)
         mf <- as.matrix(model.matrix(Terms, mf, contrasts.arg = bglm.imp$contrasts))
       ############################
         sim.coef  <- sim(bglm.imp,1)$coef
-        prob.pred <- invlogit(tcrossprod(mf[mis,,drop=FALSE], sim.coef))
+        prob.pred <- invlogit(tcrossprod(mf, sim.coef))
         random.temp <- rbinom(n.mis, 1, prob.pred)
     }
     else {
@@ -75,7 +75,7 @@ mi.binary <- function( formula, data = NULL, start = NULL, n.iter = 100,
     random.pred <- random.temp 
     random.pred <- replace(random.pred, random.temp == 0, y.levels[1])
     random.pred <- replace(random.pred, random.temp == 1, y.levels[2])
-    names(random.pred) <- names(determ.pred[mis])                      
+    names(random.pred) <- names(determ.pred)                      
   }
   else{
     random.pred <- numeric(0)
