@@ -42,24 +42,24 @@ mi.count <- function ( formula, data = NULL, start = NULL,
   bglm.imp    <- bayesglm( formula = formula, data = data, family = quasipoisson, 
                             n.iter = n.iter, start = start, 
                             drop.unused.levels = FALSE, Warning=FALSE,... )
-  determ.pred <- predict(bglm.imp, newdata = data, type = "response" )
+  determ.pred <- predict(bglm.imp, newdata = data[mis,], type = "response" )
 
   if(n.mis>0){
     if(draw.from.beta){
     ####get right design matrix#
       tt <- terms(bglm.imp)
       Terms <- delete.response(tt)
-      mf <- model.frame(Terms, data=data,  xlev = bglm.imp$xlevels)
+      mf <- model.frame(Terms, data=data[mis,],  xlev = bglm.imp$xlevels)
       mf <- as.matrix(model.matrix(Terms, mf, contrasts.arg = bglm.imp$contrasts))
     ############################
       sim.coef  <- sim(bglm.imp,1)$coef
-      lambda <- exp(tcrossprod(mf[mis,,drop=FALSE], sim.coef))
+      lambda <- exp(tcrossprod(mf, sim.coef))
       random.pred <- rpois(n.mis, lambda)
     }
     else{
-      random.pred <- rpois(n.mis, determ.pred[mis])
+      random.pred <- rpois(n.mis, determ.pred)
     }
-    names(random.pred) <- names(determ.pred[mis])
+    names(random.pred) <- names(determ.pred)
   }
   else{
     random.pred <- numeric(0)
